--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-ef4a6f34-be77-446d-8d06-de37b971cd3a;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
